QA_Ipreo/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AGM_Date__c</fullName>
        <label>AGM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AM_Intel__c</fullName>
        <description>for data migration from BDV</description>
        <label>AM Intel</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Health_Date__c</fullName>
        <label>Account Health Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Health_Description__c</fullName>
        <label>Account Health Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Health__c</fullName>
        <label>Account Health</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <displayFormat>ACCT-{000000}</displayFormat>
        <label>Account ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <controllingField>Vertical__c</controllingField>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank-Central Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank-Private Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment/Foundation-Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment/Foundation-Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment/Foundation-School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedge Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedge Fund-Fund of Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Advisor-Fund of Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Advisor-Manager of Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Advisor-Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Bank-Proprietary Trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Firm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension Fund-Corporate/Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension Fund-State/Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension Fund-Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research-Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research-Industry/Market</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_Closed_Won_Verifed_Sales__c</fullName>
        <description>All Closed Won Verifed Sales - a roll up of all ACV on Opp (has no filter)</description>
        <label>All Closed Won Verifed Sales</label>
        <summarizedField>Opportunity.ACV__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won Sales, Closed Won Verified</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>All_Managers__c</fullName>
        <inlineHelpText>Automatically updated if this Account was created from a converted EDD Lead</inlineHelpText>
        <label>All Managers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDFax__c</fullName>
        <label>BDFax</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDIsBuySide__c</fullName>
        <label>BDIsBuySide</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDIsSellSide__c</fullName>
        <label>BDIsSellSide</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDLastModifiedDate__c</fullName>
        <label>BDLastModifiedDate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDPhone__c</fullName>
        <label>BDPhone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDTypeName__c</fullName>
        <label>BDTypeName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BD_Vision_ID__c</fullName>
        <externalId>true</externalId>
        <label>BD Vision ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bookrunners__c</fullName>
        <inlineHelpText>Automatically updated if this Account was created from a converted EDD Lead</inlineHelpText>
        <label>Bookrunners</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_DR_Bank__c</fullName>
        <label>Broker/DR Bank</label>
        <picklist>
            <picklistValues>
                <fullName>BNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DB Corp Broking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deutsche DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPM Cazenove</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPM DR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CUSIP__c</fullName>
        <description>Data migration - from Ian file</description>
        <label>CUSIP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Churn_Reason__c</fullName>
        <label>Churn Reason</label>
        <picklist>
            <picklistValues>
                <fullName>At Risk – Budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk – Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk – Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk – Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Touch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Churn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Churn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Verifed_Sales_Year_To_Date__c</fullName>
        <description>Closed Won Verifed Sales To Date - a roll up of all ACV on Opp but just for Closed Date=This Year.</description>
        <label>Closed Won Verifed Sales YTD</label>
        <summarizedField>Opportunity.ACV__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.This_Year_ACV__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Company_Overview__c</fullName>
        <description>for data migration from BDV</description>
        <label>Company Overview</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Products_in_Use_CORP__c</fullName>
        <description>for data migration from BDV</description>
        <label>Competitor Products in Use (CORP)</label>
        <picklist>
            <picklistValues>
                <fullName>Alternate CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blender - Webhosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloomberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Businesswire - Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Businesswire - Webhosting/Webcasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Newswire Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital IQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Precision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chorus Call - Webcasting/Call hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Crossing - Earnings Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IR Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MZ Ilios - IR Navigator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nasdaq - Factset E&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nasdaq - Factset R&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nasdaq - Real-time Quotes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nasdaq - Shareholder.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nasdaq - Surveillance/Bloom Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nasdaq - Webhosting/Webcasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR Newswire - Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR Newswire - Webhosting/Webcasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 - Webhosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rivel - Perception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rivel - Targeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNL - E&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNL - Limted R&amp;E (for covered comp.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNL - Quotes &amp; News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNL - Webhosting/Webcasting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock Watch - News &amp; Quotes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talk Point - Webhosting/Webcasting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Products_in_Use_GMG__c</fullName>
        <label>Competitor Products in Use (GMG)</label>
        <picklist>
            <picklistValues>
                <fullName>Analec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bloomberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueMatrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital IQ (McGraw Hill)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cvent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eurekahedge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Factset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intralinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morningstar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetRoadShow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NexJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singletrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syndtrak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thomson Reuters</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Client_Tier__c</fullName>
        <description>Corporate Client Tier</description>
        <label>Corporate Client Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DM_Name__c</fullName>
        <description>Log for dm action</description>
        <label>DM Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Time__c</fullName>
        <description>data migration time</description>
        <label>DM Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Feed_User_Name__c</fullName>
        <description>for data migration from BDV</description>
        <label>Data Feed User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Status__c</fullName>
        <inlineHelpText>Automatically updated if this Account was created from a converted EDD Lead</inlineHelpText>
        <label>Deal Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debtdomain_ID__c</fullName>
        <description>Identifier from the Debtdomain system</description>
        <externalId>true</externalId>
        <label>Debtdomain ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Earnings_Release_Date__c</fullName>
        <label>Earnings Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlements__c</fullName>
        <label># Entitlements</label>
        <summaryForeignKey>Entitlement.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expected_Date__c</fullName>
        <inlineHelpText>Automatically updated if this Account was created from a converted EDD Lead</inlineHelpText>
        <label>Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Account_ID__c</fullName>
        <label>Finance Account ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Float_mm__c</fullName>
        <description>Data migration - from Ian file</description>
        <label>Float (mm)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISIN__c</fullName>
        <description>Data migration - from Ian file</description>
        <label>ISIN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_File_Date__c</fullName>
        <inlineHelpText>Automatically updated if this Account was created from a converted EDD Lead</inlineHelpText>
        <label>Initial File Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ipreo_BDSF_1_10__AccountType__c</fullName>
        <label>BD Account Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ipreo_BDSF_1_10__BDWarehouseId__c</fullName>
        <externalId>true</externalId>
        <label>BD Warehouse Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ipreo_BDSF_1_10__BD_SyncHistory__c</fullName>
        <description>Contains values (or hashes) for all fields that have ever been synchronized.</description>
        <label>BD Synchronization History</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ipreo_BDSF_1_10__bd_lastsynctime__c</fullName>
        <label>BD Last synchronization time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ipreo_Reference_CORP__c</fullName>
        <description>for data migration from BDV</description>
        <label>Ipreo Reference (CORP)</label>
        <picklist>
            <picklistValues>
                <fullName>BD Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FS Workstation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perception Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaytics/Targeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSIQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital IQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDC MarketQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FS Integrated</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ipreo_Reference_GMG__c</fullName>
        <label>Ipreo Reference (GMG)</label>
        <picklist>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM – RS&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD EQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Suite</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Issuer_Name_Diff_Date__c</fullName>
        <label>Issuer Name Diff Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Issuer_Name__c</fullName>
        <label>Issuer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Account_Detail__c</fullName>
        <label>Key Account Detail</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <picklist>
            <controllingField>Vertical__c</controllingField>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Secretary/Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt Capital Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Capital Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Sales*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Trading*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI Sales*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI Trading*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Syndication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Bus. Dev.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Company Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research-Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research-Industry/Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Management*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treasury</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Cap__c</fullName>
        <label>Issuer_Market Cap (mm)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Micro_Industry__c</fullName>
        <label>Micro Industry</label>
        <picklist>
            <controllingField>Mid_Industry__c</controllingField>
            <picklistValues>
                <fullName>Agricultural Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodity Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversified Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aluminum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrous Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold, Silver, and Precious Stones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Non-Ferrous Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car, Truck, and other Vehicle Manufacturers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car, Truck, and other Vehicle Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rubber and Plastics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronic Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durable Household Goods and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Furnishings and Fixtures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photographic Equipment and Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreational Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sporting Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toys and Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing and Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Footwear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Durable Household Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Textile Manufacturers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breweries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigarettes and Other Tobacco Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distillers and Wineries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm, Meat, and Dairy Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed and Packaged Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Drinks Manufacturers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Construction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mid_Industry__c</fullName>
        <label>Mid Industry</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metals and Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Durables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Non-Durables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food, Beverage, and Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homebuilding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Services and Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil, Gas and Coal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewable Energy Equipment and Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology and Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare and Supplies Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace and Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conglomerates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Goods and Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials and Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software and Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>